# prCARS

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: quickstart.py
prcars/: __init__.py  pipeline.py  result.py
prcars/corrections/: __init__.py  background.py  denoise.py  phase.py  phase_matching.py
prcars/methods/: __init__.py  kk.py  mem.py  nn.py
prcars/networks/: __init__.py
prcars/utils/: __init__.py
tests/: conftest.py  test_methods.py  test_pipeline.py
